--- a/Gobang/Gobang.vcxproj.filters
+++ b/Gobang/Gobang.vcxproj.filters
@@ -18,10 +18,13 @@
     <ClInclude Include="include\main.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\ui_load.h">
+    <ClInclude Include="include\ui.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="include\util.h">
+    <ClInclude Include="include\global.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="include\control.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
@@ -29,10 +32,13 @@
     <ClCompile Include="src\main.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\ui_load.cpp">
+    <ClCompile Include="src\control.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="src\util.cpp">
+    <ClCompile Include="src\ui.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="src\global.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
